Works and Feedbacks blocks - are responsive

--- a/Tajam/index.html
+++ b/Tajam/index.html
@@ -193,21 +193,39 @@
 				</a>
 		</div>
 	</div>
-	<div class="inline" style="">
-		<div class="work work1 col-lg-2"></div>
-		<div class="work work2 col-lg-2"></div>
-		<div class="work work3 col-lg-2"></div>
-		<div class="work work4 col-lg-2"></div>
-		<div class="work work1 col-lg-2"></div>
-		<div class="work work2 col-lg-2"></div>
-	</div>
-	<div class="inline" style="">
-		<div class="work work3 col-lg-2"></div>
-		<div class="work work4 col-lg-2"></div>
-		<div class="work work1 col-lg-2"></div>
-		<div class="work work2 col-lg-2"></div>
-		<div class="work work3 col-lg-2"></div>
-		<div class="work work4 col-lg-2"></div>
+	<div class="works__grid" style="">
+		
+			<div class="work work1 "></div>
+		
+		
+			<div class="work work2 "></div>
+		
+		
+			<div class="work work3 "></div>
+		
+		
+			<div class="work work4 "></div>
+
+		
+			<div class="work work1 "></div>
+		
+		
+			<div class="work work2 "></div>
+		
+	
+			<div class="work work2 "></div>
+		
+		
+			<div class="work work1 "></div>
+		
+			<div class="work work4"></div>
+		
+			<div class="work work3"></div>
+		
+			<div class="work work2 "></div>
+		
+			<div class="work work1"></div>
+		
 	</div>
 	<div class="works_bottom">
 		<button class="button_blue " onclick="loadmore_button('#');">LOAD MORE</button>
@@ -215,23 +233,23 @@
 </div>
 <div class="feedbacks">
 	<div class=" qoute">“</div>
-	<div class="feedback_slider">
-		<div class="slide">
+	<div class="feedback_slider col-lg-12">
+		<div class="feedback__slide">
 			<div class="feedback_text">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit.</div>
 			<div class="feedback_name">Jane Galadriler</div>
 			<div class="feedback_post">CEO TENGKUREP</div>
 		</div>
-		<div class="slide">
+		<div class="feedback__slide">
 			<div class="feedback_text">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit.</div>
 			<div class="feedback_name">Jane Galadriler</div>
 			<div class="feedback_post">CEO TENGKUREP</div>
 		</div>
-		<div class="slide">
+		<div class="feedback__slide">
 			<div class="feedback_text">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit.</div>
 			<div class="feedback_name">Jane Galadriler</div>
 			<div class="feedback_post">CEO TENGKUREP</div>
 		</div>
-		<div class="slide">
+		<div class="feedback__slide">
 			<div class="feedback_text">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit.</div>
 			<div class="feedback_name">Jane Galadriler</div>
 			<div class="feedback_post">CEO TENGKUREP</div>
