--- a/Tajam/index.html
+++ b/Tajam/index.html
@@ -338,7 +338,7 @@
 			</div>
 		</div>
 		
-		<ul class="footer_menu col-lg-4">
+		<ul class="footer_menu col-5 col-sm-5 col-lg-4">
 			<li class="footer_menu_item"><a href="#">Help</a></li>
 			<li class="footer_menu_item"><a href="#">Terms&Condition</a></li>
 			<li class="footer_menu_item"><a href="#">Privacy</a></li>
